# PMRA_B2_firmware_playground

./: .gitignore  .gitmodules  PMRA.cbuild-pack.yml  PMRA.csolution.yml  PMRA_B2.cbuild-pack.yml  PMRA_B2.csolution.yml  README.md  REAME.md  vcpkg-configuration.json
PMRA_B2/: PMRA_B2.cproject.yml  main.c
PMRA_B2/Include/: pmra_b2.h
PMRA_B2/RTE/Device/GD32F303ZE/: gd32f30x_misc.c  regions_GD32F303ZE.h
PMRA_B2/RTE/_Debug_GD32F303ZE/: RTE_Components.h
PMRA_B2/asm/: startup_gd32f30x_hd.S  tx_initialize_low_level.S
PMRA_B2/include/: microros_transports.h  pmra_b2.h  tx_user.h
PMRA_B2/lib/microros/: CMakeLists.txt  libmicroros.mk  toolchain.cmake.in
PMRA_B2/lib/microros/cmake/: arm-gcc-cortex-m4.cmake  arm-gcc-cortex-toolchain.cmake
PMRA_B2/src/: microros_transports.c  newlib_nano.c
